# raycaster

./: CMakeLists.txt  CMakePresets.json  README.md
src/: instantcg.cpp  instantcg.h  main.c  main.cpp  types.h  util.h
